fix(LodgingRating): improve empty star contrast

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,7 +7,7 @@
     --secondary-text-color: #FFFFFF;
     --light-border-color: #F2F2F2;
     --shadow-color: #CACACA;
-    --empty-star-color: #F2F2F2;
+    --empty-star-color: #CCCCCC;
     --full-star-color: #0065FC;
     --white: #FFFFFF;
     --search-bar-border-radius: 11px;
